updated developer notes - ps

--- a/developers.html
+++ b/developers.html
@@ -78,7 +78,7 @@
             <img src="./assets/images/pete.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Peter Smith</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Full stack web developer and automation engineer. Peter's career began in chemistry working in rapid diagnostics. His passion for engineering and science lead him to become a C# automation engineer in the cyber security sector. Currently he is developing web applications with Javascript, nodeJS and REACT.  </p>
               <a href="https://github.com/peteCodes4U" class="btn">peteCodes4U</a>
             </div>
           </div>
