secondary location changes, relocation changes
added footer to each secondary page.

Added return links to footer and linked to developers page.

added individual nav links to each page in header to link to other locations not the current one.

--- a/philadelphia.html
+++ b/philadelphia.html
@@ -30,19 +30,19 @@
                         <a class="nav-link" aria-current="page" href="./index.html">Journeys End</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./tampa.html">Placeholder</a>
+                        <a class="nav-link" href="./tampa.html">Tampa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./miami.html">Placeholder</a>
+                        <a class="nav-link" href="./miami.html">Miami</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pittsburgh.html">Placeholder</a>
+                        <a class="nav-link" href="./pittsburgh.html">Pittsburgh</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./developers.html">Meet Our Developers</a>
+                    <a class="nav-link" href="./atlanta.html">Atlanta</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#" id="mode">Toggle Mode <i class="bi bi-brightness-high-fill"></i></a>
+                    <a class="nav-link" href="#" id="mode"><i class="bi bi-brightness-high-fill"></i></a>
                     </li>
                     </ul>
                 </nav>
@@ -199,9 +199,31 @@
                         </div>
                     </div>
                 </div>
-                <!-- <footer>
-            <p>You've reached the end of your journey</p>
-        </footer> -->
+            <!-- footer design -->
+            <footer class="w-100 py-4 flex-shrink-0">
+                <div class="container py-4">
+                    <div class="row gy-4 gx-5">
+                        <div class="col-lg-4 col-md-6">
+                            <h5 class="h1 text-white">Journeys End</h5>
+                            <p class="small text-muted">Enjoy the journey wherever you go!</p>
+                            <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved.</p>
+                        </div>
+                        <div class="col-lg-2 col-md-6">
+                            <h5 class="text-white mb-3">Quick links</h5>
+                            <ul class="list-unstyled text-muted">
+                                <li><a href="./index.html">Home</a></li>
+                                <li><a href="./developers.html">About us!</a></li>
+                                <li><a href="./philadelphia.html">Get started</a></li>
+                            </ul>
+                        </div>
+                        
+                        <div class="col-lg-4 col-md-6">
+                            <h5 class="text-white mb-3">Newsletter</h5>
+                            <p class="small text-muted">Insert News About City Here</p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
                 <script src="./assets/JavaScript/secondarypage.js"></script>
                 <script src="./assets/JavaScript/weather.js"></script>
