--- a/philadelphia.html
+++ b/philadelphia.html
@@ -47,7 +47,7 @@
                     </ul>
                 </nav>
         </header>
-        <!-- We could insert a logo image if we want or just use the name the name coudld be clickable for the home page if we don't want any links -->
+        <!-- We could insert a logo image if we want or just use the name the name could be clickable for the home page if we don't want any links -->
         <a href="#" class="navbar-brand mb-0 h1"></a>
         <!-- Joe's work complete -->
         <!-- Want to make text stand out a bit more over the images, not sure best way to make that happen, tried background and it didnt look good -->
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="col m-3 p-3 rounded text-center cards">
                     <h1 class="text-decoration-underline event">Event 1</h1>
-                    <!-- Photo ID for API will be retaurant-photo -->
+                    <!-- Photo ID for API will be restaurant-photo -->
                     <img
                         src="./assets/images/restfiller.webp"
                         height="200px"
@@ -85,9 +85,9 @@
                         class="p-1"
                         id="event1-photo"
                     >
-                    <!-- Description ID for API will be retaurant-description -->
+                    <!-- Description ID for API will be restaurant-description -->
                     <p id="event1-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
-                    <!-- URL ID for API will be retaurant-url -->
+                    <!-- URL ID for API will be restaurant-url -->
                     <p>
                         <a href="#" id="event1-url" class="link">Trip Advisor Link</a>
                     </p>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
                     <h1 class="text-decoration-underline event">Event 3</h1>
-                    <!-- Photo ID for API will be retaurant-photo -->
+                    <!-- Photo ID for API will be restaurant-photo -->
                     <img
                         src="./assets/images/restfiller.webp"
                         height="200px"
@@ -123,9 +123,9 @@
                         class="p-1"
                         id="event3-photo"
                     >
-                    <!-- Description ID for API will be retaurant-description -->
+                    <!-- Description ID for API will be restaurant-description -->
                     <p id="event3-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
-                    <!-- URL ID for API will be retaurant-url -->
+                    <!-- URL ID for API will be restaurant-url -->
                     <p>
                         <a href="#" id="event3-url" class="link">Trip Advisor Link</a>
                     </p>
@@ -136,7 +136,7 @@
             <div class="row">
                 <div class="col rounded text-center cards">
                     <h1 class="text-decoration-underline">5 Day Forecast</h1>
-                    <!-- Photo ID for API will be retaurant-photo -->
+                    <!-- Photo ID for API will be restaurant-photo -->
                     <div class="page-content page-container" id="page-content">
                         <div class="padding">
                             <div class="row container d-flex justify-content-center">
