--- a/philadelphia.html
+++ b/philadelphia.html
@@ -92,7 +92,7 @@
                         <a href="#" id="event1-url" class="link">Trip Advisor Link</a>
                     </p>
                     <!-- We can use this to randomize a new selection from API -->
-                    <button class="btn-lg">Try again</button>
+                    <button class="btn-lg button">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
                     <h1 class="text-decoration-underline event">Event 2</h1>
@@ -111,7 +111,7 @@
                         <a href="#" id="event2-url" class="link">Trip Advisor Link</a>
                     </p>
                     <!-- We can use this to randomize a new selection from API -->
-                    <button class="btn-lg">Try again</button>
+                    <button class="btn-lg button">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
                     <h1 class="text-decoration-underline event">Event 3</h1>
@@ -130,7 +130,7 @@
                         <a href="#" id="event3-url" class="link">Trip Advisor Link</a>
                     </p>
                     <!-- We can use this to randomize a new selection from API -->
-                    <button class="btn-lg">Try again</button>
+                    <button class="btn-lg button">Try again</button>
                 </div>
             </div>
             <div class="row">
@@ -211,9 +211,9 @@
                         <div class="col-lg-2 col-md-6">
                             <h5 class="text-white mb-3">Quick links</h5>
                             <ul class="list-unstyled text-muted">
-                                <li><a href="./index.html">Home</a></li>
-                                <li><a href="./developers.html">About us!</a></li>
-                                <li><a href="./philadelphia.html">Get started</a></li>
+                                <li><a href="./index.html" class="linkfooter">Home</a></li>
+                                <li><a href="./developers.html" class="linkfooter">About us!</a></li>
+                                <li><a href="./philadelphia.html" class="linkfooter">Get started</a></li>
                             </ul>
                         </div>
                         
