phase II integation weather and eros

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <nav class="nav">
             <ul class="nav nav-underline">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./philadelphia.html">Philadelphia</a>
+                    <a id="philadelphia" class="nav-link" aria-current="page" href="./philadelphia.html">Philadelphia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./tampa.html">Tampa</a>
+                    <a id="tampa" class="nav-link" href="./tampa.html">Tampa</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./miami.html">Miami</a>
+                    <a id="miami" class="nav-link" href="./miami.html">Miami</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pittsburgh.html">Pittsburgh</a>
+                    <a id="pittsburgh" class="nav-link" href="./pittsburgh.html">Pittsburgh</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./atlanta.html">Atlanta</a>
+                    <a id="atlanta" class="nav-link" href="./atlanta.html">Atlanta</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./developers.html">Meet Our Developers</a>
@@ -216,6 +216,7 @@
 
     <script src="./assets/JavaScript/mainpage.js"></script>
     <script src="./assets/JavaScript/modetoggle.js"></script>
+    <script src="./assets/JavaScript/scriptMainEros.js"></script>
 </body>
 </html>
 
