--- a/philadelphia.html
+++ b/philadelphia.html
@@ -18,7 +18,7 @@
         <!-- secondarypage CSS -->
         <link rel="stylesheet" href="./assets/css/secondarypage.css">
         <link rel="stylesheet" href="./assets/css/weather.css">
-        <title>Date Night Results!</title>
+        <title>Enjoy the Journey</title>
     </head>
     <body>
         <!-- Joe's work with adding a nav bar -->
@@ -42,7 +42,7 @@
                         <a id="atlanta" class="nav-link" href="./atlanta.html">Atlanta</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./developers.html">Meet Our Developers</a>
+                        <a class="nav-link" href="#" id="mode"><i class="bi bi-brightness-high-fill"></i></a>
                     </li>
                     </ul>
                 </nav>  
@@ -142,9 +142,31 @@
                 </div>
             </div>
         </div>
-        <!-- <footer>
-            <p>You've reached the end of your journey</p>
-        </footer> -->
+        <!-- footer design -->
+        <footer class="w-100 py-4 flex-shrink-0">
+            <div class="container py-4">
+                <div class="row gy-4 gx-5">
+                    <div class="col-lg-4 col-md-6">
+                        <h5 class="h1 text-white">Journeys End</h5>
+                        <p class="small text-muted">Enjoy the journey wherever you go!</p>
+                        <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved.</p>
+                    </div>
+                    <div class="col-lg-2 col-md-6">
+                        <h5 class="text-white mb-3">Quick links</h5>
+                        <ul class="list-unstyled text-muted">
+                            <li><a href="./index.html" class="linkfooter">Home</a></li>
+                            <li><a href="./developers.html" class="linkfooter">About us!</a></li>
+                            <li><a href="./philadelphia.html" class="linkfooter">Get started</a></li>
+                        </ul>
+                    </div>
+                    
+                    <div class="col-lg-4 col-md-6">
+                        <h5 class="text-white mb-3">Newsletter</h5>
+                        <p class="small text-muted">Insert News About City Here</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
