--- a/miami.html
+++ b/miami.html
@@ -78,10 +78,9 @@
     </div>
         <div class="row">
             <div class="col rounded cards">
-                <h1 class="text-decoration-underline event">5 Day Forecast</h1>
-
+                <h1 class="text-decoration-underline event d-flex justify-content-center pt-3">5 Day Forecast</h1>
                 <!-- Weather App feature -->
-                <div class="page-content page-container" id="page-content">
+                <div class="page-content page-container d-flex justify-content-center" id="page-content">
                     <div class="padding">
                         <div class="row container d-flex justify-content-center">
                             <div class="col-lg-12 grid-margin stretch-card">
@@ -174,11 +173,6 @@
         <script src="./assets/JavaScript/ticket.js"></script>
         <script src="./assets/JavaScript/scriptEros.js"></script>
         <script src="./assets/JavaScript/scriptMainEros.js"></script>
-        <script>
-            getWeather('miami');
-            getWeather5day('miami');
-            getWeather5dayPhotos('miami');
-        </script>
 </body>
 
 </html>
