--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <link rel="stylesheet" href="./assets/css/mediaquery.css">
     <title>Journey's End | Enjoy The Journey</title>
 </head>
+
 <body>
     <header>
         <nav class="nav">
             <ul class="nav nav-underline">
                 <li class="nav-item">
-                    <a id="philadelphia" class="nav-link" aria-current="page" href="./philadelphia.html">Philadelphia</a>
+                    <a id="philadelphia" class="nav-link" aria-current="page"
+                        href="./philadelphia.html">Philadelphia</a>
                 </li>
                 <li class="nav-item">
                     <a id="tampa" class="nav-link" href="./tampa.html">Tampa</a>
@@ -34,8 +36,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./developers.html">Meet Our Developers</a>
                 </li>
-                </ul>
-            </nav>          
+            </ul>
+        </nav>
     </header>
     <!-- Image Slider -->
     <div class="slider">
@@ -130,7 +132,7 @@
                     <div class="nickname">Hot'lanta</div>
                     <div class="des">
                         ♢ Vibrant city known for it's Southern hospitality<br>
-                        ♢ Home to the World of Coca-Cola<br> 
+                        ♢ Home to the World of Coca-Cola<br>
                         ♢ Known for it's rich history and culture<br>
                         ♢ Rich in music history, with a thriving music scene<br>
                         ♢ Dynamic blend of southern charm and urban sophistication<br>
@@ -213,11 +215,9 @@
         <!-- time running -->
         <div class="time"></div>
     </div>
-
     <script src="./assets/JavaScript/mainpage.js"></script>
     <script src="./assets/JavaScript/modetoggle.js"></script>
     <script src="./assets/JavaScript/scriptMainEros.js"></script>
 </body>
+
 </html>
-
-
