update dev page
updated dev page with matching header from other pages.

Added footer and corrected copyright info

--- a/tampa.html
+++ b/tampa.html
@@ -21,8 +21,7 @@
 </head>
 
 <body>
-    <!-- Joe's work with adding a nav bar -->
-    <!-- I want to figure out how to make the nav bar transparent -->
+    <!-- Navigation Bar -->
     <header id="header">
         <nav class="nav">
             <ul class="nav nav-underline">
@@ -48,7 +47,7 @@
             </ul>
         </nav>
     </header>
-    <!-- We could insert a logo image if we want or just use the name the name coudld be clickable for the home page if we don't want any links -->
+    <!-- We could insert a logo image if we want or just use the name the name could be clickable for the home page if we don't want any links -->
     <a href="#" class="navbar-brand mb-0 h1"></a>
     <!-- Joe's work complete -->
     <!-- Want to make text stand out a bit more over the images, not sure best way to make that happen, tried background and it didnt look good -->
@@ -148,7 +147,7 @@
                 <div class="col-lg-4 col-md-6">
                     <h5 class="h1 text-white">Journeys End</h5>
                     <p class="small text-muted">Enjoy the journey wherever you go!</p>
-                    <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved.</p>
+                    <p class="small text-muted mb-0">&copy; Copyrights. Journeys End and Friends.</p>
                 </div>
                 <div class="col-lg-2 col-md-6">
                     <h5 class="text-white mb-3">Quick links</h5>
