--- a/pittsburgh.html
+++ b/pittsburgh.html
@@ -21,8 +21,7 @@
 </head>
 
 <body>
-    <!-- Joe's work with adding a nav bar -->
-    <!-- I want to figure out how to make the nav bar transparent -->
+    <!-- Navigation Bar -->
     <header id="header">
         <nav class="nav">
             <ul class="nav nav-underline">
@@ -147,7 +146,7 @@
                 <div class="col-lg-4 col-md-6">
                     <h5 class="h1 text-white">Journeys End</h5>
                     <p class="small text-muted">Enjoy the journey wherever you go!</p>
-                    <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved.</p>
+                    <p class="small text-muted mb-0">&copy; Copyrights. Journeys End and Friends.</p>
                 </div>
                 <div class="col-lg-2 col-md-6">
                     <h5 class="text-white mb-3">Quick links</h5>
