weather card , text changes
updated weather cards to fit style of over page better.

updated fonts and text on weather cards

updated h1 class of 5 day forecast for more accurate representation

linked Get started back to the correct pages

--- a/atlanta.html
+++ b/atlanta.html
@@ -76,7 +76,7 @@
     </div>
     <div class="row">
         <div class="col rounded cards">
-            <h1 class="text-decoration-underline event d-flex justify-content-center pt-3">5 Day Forecast</h1>
+            <h1 class="text-decoration-underline event d-flex justify-content-center pt-3">Present Day + 5 Day Forecast</h1>
             <!-- Weather App feature -->
             <div class="page-content page-container d-flex justify-content-center" id="page-content">
                 <div class="padding">
@@ -152,7 +152,7 @@
                     <ul class="list-unstyled text-muted">
                         <li><a href="./index.html" class="linkfooter">Home</a></li>
                         <li><a href="./developers.html" class="linkfooter">About us!</a></li>
-                        <li><a href="./philadelphia.html" class="linkfooter">Get started</a></li>
+                        <li><a href="./atlanta.html" class="linkfooter">Get started</a></li>
                     </ul>
                 </div>
 
