--- a/developers.html
+++ b/developers.html
@@ -139,7 +139,7 @@
                 <a href="./developers.html" class="linkfooter">About us!</a>
               </li>
               <li>
-                <a href="./philadelphia.html" class="linkfooter">Get started</a>
+                <a href="./index.html" class="linkfooter">Get started</a>
               </li>
             </ul>
           </div>
