--- a/philadelphia.html
+++ b/philadelphia.html
@@ -78,7 +78,7 @@
     </div>
         <div class="row">
             <div class="col rounded cards">
-                <h1 class="text-decoration-underline event d-flex justify-content-center pt-3">5 Day Forecast</h1>
+                <h1 class="text-decoration-underline event d-flex justify-content-center pt-3">Present Day + 5 Day Forecast</h1>
                 <!-- Weather App feature -->
                 <div class="page-content page-container d-flex justify-content-center" id="page-content">
                     <div class="padding">
