--- a/pittsburgh.html
+++ b/pittsburgh.html
@@ -77,7 +77,7 @@
     </div>
     <div class="row">
         <div class="col rounded cards">
-            <h1 class="text-decoration-underline event d-flex justify-content-center pt-3">5 Day Forecast</h1>
+            <h1 class="text-decoration-underline event d-flex justify-content-center pt-3">Present Day + 5 Day Forecast</h1>
             <!-- Weather App feature -->
             <div class="page-content page-container d-flex justify-content-center" id="page-content">
                 <div class="padding">
@@ -153,7 +153,7 @@
                     <ul class="list-unstyled text-muted">
                         <li><a href="./index.html" class="linkfooter">Home</a></li>
                         <li><a href="./developers.html" class="linkfooter">About us!</a></li>
-                        <li><a href="./philadelphia.html" class="linkfooter">Get started</a></li>
+                        <li><a href="./pittsburgh.html" class="linkfooter">Get started</a></li>
                     </ul>
                 </div>
 
