finaltouches first pass

--- a/tampa.html
+++ b/tampa.html
@@ -60,10 +60,11 @@
             <div class="mask">
                 <div class="d-flex justify-content-center align-items-center h-100">
                     <div class="text-white">
-                        <h1 class="mb-3 mt-5 pt-5">Tampa</h1>
-                        <h4 class="mb-3 mt-3 pt-3">A beautiful city in central Florida located minutes from beautiful
+                        <h1  class="mb-3 mt-5 pt-5 city">Tampa</h1>
+                        <h2 class="mb-3 mt-3 pt-3 nickname">the big guava</h4>
+                        <h4  class="mb-3 mt-3 pt-3 des">A beautiful city in central Florida located minutes from the magestic
                             Gulf Coast
-                            Beaches</h4>
+                            Beaches</h2>
                         <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
                     </div>
                 </div>
@@ -172,7 +173,5 @@
     <script src="./assets/JavaScript/weather.js"></script>
     <script src="./assets/JavaScript/ticket.js"></script>
     <script src="./assets/JavaScript/scriptEros.js"></script>
-    <script src="./assets/JavaScript/scriptMainEros.js"></script>
 </body>
-
 </html>
