--- a/philadelphia.html
+++ b/philadelphia.html
@@ -80,12 +80,12 @@
             <div class="col rounded cards">
                 <h1 class="text-decoration-underline event d-flex justify-content-center pt-3">Present Day + 5 Day Forecast</h1>
                 <!-- Weather App feature -->
-                <div class="page-content page-container d-flex justify-content-center" id="page-content">
+                <div class="page-content page-container-fluid d-flex justify-content-center" id="page-content">
                     <div class="padding">
                         <div class="row container d-flex justify-content-center">
-                            <div class="col-lg-12 grid-margin stretch-card">
-                                <div class="d-flex p-2 mt-4 " id="card-container">
-                                    <div class="card m-3 pt-3" style="width:12rem;">
+                            <div class="col-lg-12 stretch-card">
+                                <div class="d-flex flex-wrap p-3 mt-4 d-flex " id="card-container">
+                                    <div class="card m-3 pt-3" style="width:10rem;">
                                         <h4 id="day0date">Date</h4>
                                         <img src="./assets/images/sun.png" id="imagetoday" height="50px" width="50px">
                                         <p id="day0temp">Temperature:</p>
@@ -93,7 +93,7 @@
                                         <p id="day0humidity">Humidity:</p>
                                     </div>
 
-                                    <div class="card m-3 pt-3" style="width:12rem;">
+                                    <div class="card m-3 pt-3" style="width:10rem;">
                                         <h4 id="day1date">Date</h4>
                                         <img src="./assets/images/sun.png" id="imageday0" height="50px" width="50px">
                                         <p id="day1temp">Temperature:</p>
@@ -101,7 +101,7 @@
                                         <p id="day1humidity">Humidity:</p>
                                     </div>
 
-                                    <div class="card m-3 pt-3" style="width:12rem;">
+                                    <div class="card m-3 pt-3" style="width:10rem;">
                                         <h4 id="day2date">Date</h4>
                                         <img id="imageday8" src="./assets/images/sun.png" height="50px" width="50px">
                                         <p id="day2temp">Temperature:</p>
@@ -109,7 +109,7 @@
                                         <p id="day2humidity">Humidity:</p>
                                     </div>
 
-                                    <div class="card m-3 pt-3" style="width:12rem;">
+                                    <div class="card m-3 pt-3" style="width:10rem;">
                                         <h4 id="day3date">Date</h4>
                                         <img id="imageday16" src="./assets/images/sun.png" height="50px" width="50px">
                                         <p id="day3temp">Temperature:</p>
@@ -117,7 +117,7 @@
                                         <p id="day3humidity">Humidity:</p>
                                     </div>
 
-                                    <div class="card m-3 pt-3" style="width:12rem;">
+                                    <div class="card m-3 pt-3" style="width:10rem;">
                                         <h4 id="day4date">Date</h4>
                                         <img id="imageday24" src="./assets/images/sun.png" height="50px" width="50px">
                                         <p id="day4temp">Temperature:</p>
@@ -125,7 +125,7 @@
                                         <p id="day4humidity">Humidity:</p>
                                     </div>
 
-                                    <div class="card m-3 pt-3" style="width:12rem;">
+                                    <div class="card m-3 pt-3" style="width:10rem;">
                                         <h4 id="day5date">Date</h4>
                                         <img id="imageday32" src="./assets/images/sun.png" height="50px" width="50px">
                                         <p id="day5temp">Temperature:</p>
@@ -172,6 +172,5 @@
         <script src="./assets/JavaScript/weather.js"></script>
         <script src="./assets/JavaScript/ticket.js"></script>
         <script src="./assets/JavaScript/scriptEros.js"></script>
-        <script src="./assets/JavaScript/scriptMainEros.js"></script>
 </body>
 </html>
