--- a/developers.html
+++ b/developers.html
@@ -84,8 +84,8 @@
         <div class="card-body">
           <h5 class="card-title">David Rauf</h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            <b>Full Stack Developer</b><br>
+            Designs that inspire, captivate, & convert
           </p>
           <a href="https://github.com/drauf727" class="btn">Drauf727</a>
         </div>
