--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 </head>
 
 <body>
+    <!-- Splash HTML -->
+    <div class = "splashpage">
+        <h1 class="slogan-header">
+            <span class="slogan">YOU ENJOY</span> <span class="slogan">THE JOURNEY</span><br>
+            <span class="slogan">WE'LL CURATE</span> <span class="slogan">ITS END</span>
+        </h1>
+    </div>
+    <!-- Mainpage HTML -->
     <header>
         <nav class="nav">
             <ul class="nav nav-underline">
@@ -215,6 +223,7 @@
         <!-- time running -->
         <div class="time"></div>
     </div>
+    <script src="./assets/JavaScript/splash.js"></script>
     <script src="./assets/JavaScript/mainpage.js"></script>
     <script src="./assets/JavaScript/modetoggle.js"></script>
     <script src="./assets/JavaScript/scriptMainEros.js"></script>
