updated developers blurb

--- a/developers.html
+++ b/developers.html
@@ -113,8 +113,7 @@
         <div class="card-body">
           <h5 class="card-title">Peter Smith</h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            full stack web developer from Tampa Fl. Pete's career in technology began with chemistry working in rapid diagnostics, and evolved into engineering for automation, quality assurance and application development.
           </p>
           <a href="https://github.com/peteCodes4U" class="btn">peteCodes4U</a>
         </div>
