--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- mainpage CSS -->
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/mainpage.css">
     <link rel="stylesheet" href="./assets/css/mediaquery.css">
     <title>Journey's End | Enjoy The Journey</title>
 </head>
+
+    <div class="splashpage">
+        <h1 class="slogan-header">
+            <span class="slogan">YOU ENJOY</span> <span class="slogan">THE JOURNEY</span><br>
+            <span class="slogan">WE'LL CURATE</span> <span class="slogan">ITS END</span>
+        </h1>
+    </div>
 
 <body>
     <header>
@@ -215,6 +223,8 @@
         <!-- time running -->
         <div class="time"></div>
     </div>
+    
+    <script src="./assets/JavaScript/splash.js"></script>
     <script src="./assets/JavaScript/mainpage.js"></script>
     <script src="./assets/JavaScript/modetoggle.js"></script>
     <script src="./assets/JavaScript/scriptMainEros.js"></script>
