--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- mainpage CSS -->
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- mainpage stylesheets -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/mainpage.css">
     <link rel="stylesheet" href="./assets/css/mediaquery.css">
     <title>Journey's End | Enjoy The Journey</title>
 </head>
-
+<!-- Splash Page -->
     <div class="splashpage">
         <h1 class="slogan-header">
             <span class="slogan center1">YOU ENJOY</span> <span class="slogan">THE JOURNEY</span><br>
@@ -24,7 +24,9 @@
         </h1>
     </div>
 <body>
+    <!-- "header section" -->
     <header>
+        <!-- Navigation Bar -->
         <nav class="nav">
             <ul class="nav nav-underline">
                 <li class="nav-item">
@@ -217,7 +219,7 @@
                 </div>
             </div>
         </div>
-        <!-- next prev -->
+        <!-- next prev buttons-->
         <div class="arrowIcon">
             <button id="previous">⇦</button>
             <button id="next">⇨</button>
@@ -225,11 +227,10 @@
         <!-- time running -->
         <div class="time"></div>
     </div>
-    
+    <!-- JavaScript Source Files -->
     <script src="./assets/JavaScript/splash.js"></script>
     <script src="./assets/JavaScript/mainpage.js"></script>
     <script src="./assets/JavaScript/modetoggle.js"></script>
     <script src="./assets/JavaScript/scriptMainEros.js"></script>
 </body>
-
 </html>
