--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         </nav>
     </header>
     <!-- Image Slider -->
-    <div class="slider">
+    <main class="slider">
         <!-- Images List Main -->
-        <div class="list">
+        <section class="list">
             <!-- Image 1 -->
-            <div class="item">
+            <article class="item">
                 <img id="big-miami" src="./assets/images/miami-dark3.jpg">
                 <div class="content">
                     <div class="state">Florida</div>
@@ -74,9 +74,9 @@
                         <button class="nightBtn">Night 🌒</button>
                     </div>
                 </div>
-            </div>
+            </article>
             <!-- Image 2 -->
-            <div class="item">
+            <article class="item">
                 <img id="big-tampa" src="./assets/images/tampa-dark3.jpg">
                 <div class="content">
                     <div class="state">Florida</div>
@@ -94,9 +94,9 @@
                         <button class="nightBtn">Night 🌒</button>
                     </div>
                 </div>
-            </div>
+            </article>
             <!-- Image 3 -->
-            <div class="item">
+            <article class="item">
                 <img id="big-philly" src="./assets/images/philly--dark2.jpg">
                 <div class="content">
                     <div class="state">Pennsylvania</div>
@@ -114,9 +114,9 @@
                         <button class="nightBtn">Night 🌒</button>
                     </div>
                 </div>
-            </div>
+            </article>
             <!-- Image 4 -->
-            <div class="item">
+            <article class="item">
                 <img id="big-pitt" src="./assets/images/pitt-dark2.jpg">
                 <div class="content">
                     <div class="state">Pennsylvania</div>
@@ -134,9 +134,9 @@
                         <button class="nightBtn">Night 🌒</button>
                     </div>
                 </div>
-            </div>
+            </article>
             <!-- Image 5 -->
-            <div class="item">
+            <article class="item">
                 <img id="big-atlanta" src="./assets/images/atlanta-dark.png">
                 <div class="content">
                     <div class="state">Georgia</div>
@@ -154,79 +154,79 @@
                         <button class="nightBtn">Night 🌒</button>
                     </div>
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
         <!-- list thumbnail -->
-        <div class="thumbnail">
+        <section class="thumbnail">
             <!-- thumbnail 1 -->
-            <div class="item">
+            <article class="item">
                 <img id="lil-miami" src="./assets/images/miami-dark3.jpg">
-                <div class="content">
-                    <div class="city">
+                <figure class="content">
+                    <figcaption class="city">
                         Miami
-                    </div>
-                    <div class="description">
+                    </figcaption>
+                    <figcaption class="description">
                         Magic City
-                    </div>
-                </div>
-            </div>
+                    </figcaption>
+                </figure>
+            </article>
             <!-- thumbnail 2 -->
-            <div class="item">
+            <article class="item">
                 <img id="lil-tampa" src="./assets/images/tampa-dark3.jpg">
-                <div class="content">
-                    <div class="city">
+                <figure class="content">
+                    <figcaption class="city">
                         Tampa
-                    </div>
-                    <div class="description">
+                    </figcaption>
+                    <figcaption class="description">
                         Big Guava
-                    </div>
-                </div>
-            </div>
+                    </figcaption>
+                </figure>
+            </article>
             <!-- thumbnail 3 -->
-            <div class="item">
+            <article class="item">
                 <img id="lil-philly" src="./assets/images/philly--dark2.jpg">
-                <div class="content">
-                    <div class="city">
+                <figure class="content">
+                    <figcaption class="city">
                         Philadelphia
-                    </div>
-                    <div class="description">
+                    </figcaption>
+                    <figcaption class="description">
                         Brotherly Love
-                    </div>
-                </div>
-            </div>
+                    </figcaption>
+                </figure>
+            </article>
             <!-- thumbnail 4 -->
-            <div class="item">
+            <article class="item">
                 <img id="lil-pitt" src="./assets/images/pitt-dark2.jpg">
-                <div class="content">
-                    <div class="city">
+                <figure class="content">
+                    <figcaption class="city">
                         Pittsburgh
-                    </div>
-                    <div class="description">
+                    </figcaption>
+                    <figcaption class="description">
                         Steel City
-                    </div>
-                </div>
-            </div>
+                    </figcaption>
+                </figure>
+            </article>
             <!-- thumbnail 5 -->
-            <div class="item">
+            <article class="item">
                 <img id="lil-atlanta" src="./assets/images/atlanta-dark.png">
-                <div class="content">
+                <figure class="content">
                     <div class="city">
                         Atlanta
                     </div>
                     <div class="description">
                         Hot'lanta
                     </div>
-                </div>
-            </div>
-        </div>
+                </figure>
+            </article>
+        </section>
         <!-- next prev buttons-->
-        <div class="arrowIcon">
+        <aside class="arrowIcon">
             <button id="previous">⇦</button>
             <button id="next">⇨</button>
-        </div>
+        </aside>
         <!-- time running -->
-        <div class="time"></div>
-    </div>
+        <time class="time"></time>
+    </main>
     <!-- JavaScript Source Files -->
     <script src="./assets/JavaScript/splash.js"></script>
     <script src="./assets/JavaScript/mainpage.js"></script>
