--- a/tampa.html
+++ b/tampa.html
@@ -8,12 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Poppins:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&family=Shrikhand&display=swap"
-        rel="stylesheet">
     <!-- secondarypage CSS -->
     <link rel="stylesheet" href="./assets/css/secondarypage.css">
     <link rel="stylesheet" href="./assets/css/weather.css">
@@ -53,7 +47,7 @@
     <!-- Want to make text stand out a bit more over the images, not sure best way to make that happen, tried background and it didnt look good -->
     <div class="container-lg">
         <div class="p-3 m-3 text-center bg-image align-items-center justify-content-center rounded" style="
-    background-image: url('./assets/images/tampa-dark.png');
+    background-image: url('./assets/images/tampa-dark2.jpg');
     background-size: cover;
     background-position: 100%;
     height: 400px;">
@@ -61,7 +55,7 @@
                 <div class="d-flex justify-content-center align-items-center h-100">
                     <div class="text-white">
                         <h1  class="mb-3 mt-5 pt-5 city">Tampa</h1>
-                        <h2 class="mb-3 mt-3 pt-3 nickname">the big guava</h4>
+                        <h2 class="mb-3 mt-3 pt-3 nickname">The Big Guava</h4>
                         <h4  class="mb-3 mt-3 pt-3 des">A beautiful city in central Florida located minutes from the magestic
                             Gulf Coast
                             Beaches</h2>
