--- a/miami.html
+++ b/miami.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,11 +45,9 @@
     <div class="container-lg">
         <div class="p-3 m-3 text-center bg-image align-items-center justify-content-center rounded" style="
     background-image: url('./assets/images/miami-dark3.jpg');
-
     background-size: cover;
     background-position: 100%;
-    height: 400px;
-">
+    height: 400px;">
             <div class="mask">
                 <div class="d-flex justify-content-center align-items-center h-100">
                     <div class="text-white">
