.html title updates
updated titles on each page to reflect page description better.

--- a/miami.html
+++ b/miami.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- secondarypage CSS -->
     <link rel="stylesheet" href="./assets/css/secondarypage.css">
-    <title>Enjoy the Journey!</title>
+    <title>Miami | Magic City </title>
 </head>
 <body>
     <!-- Navigation Bar -->
