--- a/atlanta.html
+++ b/atlanta.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- secondarypage CSS -->
     <link rel="stylesheet" href="./assets/css/secondarypage.css">
-    <title>Enjoy the Journey</title>
+    <title>Atlanta | Hot'lanta</title>
 </head>
 <body>
     <!-- Navigation Bar -->
