--- a/developers.html
+++ b/developers.html
@@ -13,7 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
     <link rel="stylesheet" href="./assets/css/secondarypage.css" />
     <link rel="stylesheet" href="./assets/css/developers.css" />
-    <title>Our Developers</title>
+    <title>Journeys End | Meet The Team!</title>
   </head>
   <body>
     <header id="header">
