--- a/philadelphia.html
+++ b/philadelphia.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <!-- secondarypage CSS -->
         <link rel="stylesheet" href="./assets/css/secondarypage.css">
-        <title>Enjoy the Journey</title>
+        <title>Philadelphia | Brotherly Love</title>
     </head>
     <body>
         <!-- Navigation Bar -->
