--- a/atlanta.html
+++ b/atlanta.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- secondarypage CSS -->
     <link rel="stylesheet" href="./assets/css/secondarypage.css">
+    <link rel="stylesheet" href="./assets/css/mediaquerysecondary.css">
     <title>Atlanta | Hot'lanta</title>
 </head>
 <body>
