--- a/philadelphia.html
+++ b/philadelphia.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <!-- secondarypage CSS -->
         <link rel="stylesheet" href="./assets/css/secondarypage.css">
+        <link rel="stylesheet" href="./assets/css/">
+        <link rel="stylesheet" href="./assets/css/mediaquerysecondary.css">
         <title>Philadelphia | Brotherly Love</title>
     </head>
     <body>
