--- a/atlanta.html
+++ b/atlanta.html
@@ -151,7 +151,7 @@
 
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-white mb-3">Newsletter</h5>
-                    <p class="small text-muted">Insert News About City Here</p>
+                    <p class="small text-muted"><a href="https://www.atlantaga.gov/government/mayor-s-office/executive-offices/office-of-communications/press-releases/moving-atlanta-forward-newsletter" class="linkfooter">Moving Atlanta Forward</a></p>
                 </div>
             </div>
         </div>
