--- a/philadelphia.html
+++ b/philadelphia.html
@@ -157,7 +157,7 @@
     
                     <div class="col-lg-4 col-md-6">
                         <h5 class="text-white mb-3">Newsletter</h5>
-                        <p class="small text-muted">Insert News About City Here</p>
+                        <p class="small text-muted"><a href="https://www.phillyfunguide.com/?gad_source=1&gclid=CjwKCAjw5v2wBhBrEiwAXDDoJU6tM_WOUF_5d6VwZab8lLssP_hwQOt4bbpS4w3spsL6RiPqzNhZVRoCI_4QAvD_BwE" class="linkfooter">Philly fun guide</a></p>
                     </div>
                 </div>
             </div>
