--- a/pittsburgh.html
+++ b/pittsburgh.html
@@ -152,7 +152,7 @@
 
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-white mb-3">Newsletter</h5>
-                    <p class="small text-muted">Insert News About City Here</p>
+                    <p class="small text-muted"><a href="https://www.visitpittsburgh.com/plan-your-trip/newsletter-signup/" class="linkfooter">Visit Pittsburgh!</a></p>
                 </div>
             </div>
         </div>
