--- a/miami.html
+++ b/miami.html
@@ -151,7 +151,7 @@
 
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-white mb-3">Newsletter</h5>
-                    <p class="small text-muted">Insert News About City Here</p>
+                    <p class="small text-muted"><a href="https://www.timeout.com/miami/newsletter" class="linkfooter">Timeout Miami</a></p>
                 </div>
             </div>
         </div>
