--- a/tampa.html
+++ b/tampa.html
@@ -154,7 +154,7 @@
 
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-white mb-3">Newsletter</h5>
-                    <p class="small text-muted">Insert News About City Here</p>
+                    <p class="small text-muted"><a href="https://www.tampabay.com/newsletters/" class="linkfooter">Tampa Bay Times</a></p>
                 </div>
             </div>
         </div>
